# Rasterizer

./: CMakeLists.txt  README.md  config.yaml
src/: Pipeline.cpp  Pipeline.hpp
